--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -2,16 +2,31 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name example.com www.example.com;
+    server_name _;
 
     index index.php index.html index.htm;
-
     root /var/www/html;
 
-    location ~ /.well-known/acme-challenge {
-        allow all;
-        root /var/www/html;
-    }
+    # NPM passes real client IP via X-Forwarded-For
+    set_real_ip_from 172.16.0.0/12;
+    set_real_ip_from 10.0.0.0/8;
+    set_real_ip_from 192.168.0.0/16;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+
+    # basic security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # gzip
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml application/rss+xml;
 
     client_max_body_size 500M;
 
@@ -27,6 +42,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTP_X_FORWARDED_PROTO https;
     }
 
     location ~ /\.ht {
@@ -34,13 +50,20 @@ server {
     }
 
     location = /favicon.ico {
-        log_not_found off; access_log off;
+        log_not_found off;
+        access_log off;
     }
+
     location = /robots.txt {
-        log_not_found off; access_log off; allow all;
+        log_not_found off;
+        access_log off;
+        allow all;
     }
-    location ~* \.(css|gif|ico|jpeg|jpg|js|png)$ {
-        expires max;
+
+    # cache static files
+    location ~* \.(css|gif|ico|jpeg|jpg|js|png|woff|woff2|svg|eot|ttf|otf)$ {
+        expires 365d;
+        add_header Cache-Control "public, immutable";
         log_not_found off;
     }
 }
