--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 services:
   db:
     image: docker.io/mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password    
+    command: --default-authentication-plugin=mysql_native_password
     container_name: db
     restart: unless-stopped
     env_file: .env
@@ -19,10 +19,23 @@ services:
     networks:
       - wordpress-network
 
+  redis:
+    image: docker.io/redis:7-alpine
+    container_name: redis
+    restart: unless-stopped
+    command: redis-server --appendonly yes
+    volumes:
+      - ./data/redis:/data
+    networks:
+      - wordpress-network
+
   wordpress:
     depends_on:
       - db
-    image: docker.io/wordpress:php8.3-fpm-alpine
+      - redis
+    build:
+      context: .
+      dockerfile: Dockerfile.wordpress
     container_name: wordpress
     restart: unless-stopped
     env_file: .env
@@ -34,13 +47,15 @@ services:
       - PHP_POST_MAX_SIZE=150M
       - PHP_UPLOAD_MAX_FILESIZE=150M
       - PHP_MAX_EXECUTION_TIME=600
+      - WP_REDIS_HOST=redis
+      - WP_REDIS_PORT=6379
     volumes:
       - ./data/wordpress:/var/www/html
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
       - ./uploads.ini:/usr/local/etc/php8.3/conf.d/uploads.ini
     networks:
       - wordpress-network
-      
+
   webserver:
     depends_on:
       - wordpress
