will work with http as well

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,6 @@
 APP_PORT=8699
+# set to 0.0.0.0 to expose to network, leave empty for localhost only
+APP_HOST=
 
 MYSQL_ROOT_PASSWORD=<PASSOWRD>
 MYSQL_USER=<user>
