--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,3 +1,9 @@
+# default to http, use forwarded proto if set (e.g. from NPM with SSL)
+map $http_x_forwarded_proto $forwarded_proto {
+    default $http_x_forwarded_proto;
+    ''      http;
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -42,7 +48,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param HTTP_X_FORWARDED_PROTO https;
+        fastcgi_param HTTP_X_FORWARDED_PROTO $forwarded_proto;
     }
 
     location ~ /\.ht {
