--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
     restart: unless-stopped
     env_file: .env
     ports:
-      - ${APP_PORT}:80
+      - ${APP_HOST:-127.0.0.1}:${APP_PORT}:80
     volumes:
       - ./data/wordpress:/var/www/html
       - ./nginx-conf:/etc/nginx/conf.d
